--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -83,7 +83,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Contact Your Name</h1>
+          <h1 class="jumbotron-heading">Contact Paul Kihara</h1>
           <p class="lead text-muted">This is the page to contact you. Messags sent through this page will land in your mail.</p>
         </div>
       </section>
